--- a/config.env
+++ b/config.env
@@ -3,13 +3,13 @@
 
 #________COMPULSORY____________
 
-TG_BOT_TOKEN= ""
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
+TG_BOT_TOKEN= "2110960219:AAGFAS0egzwEk79LXE_0PmfvY3patW6m0hg"
+APP_ID = 1424314
+API_HASH = "d1c1c9262bbae8f5eeb80ba47c9f3dff"
+OWNER_ID = 1079261681
 
 # Add different ID separated by a SPACE (Like :: AUTH_CHANNEL = -10012503747 -10012586941 539295917)
-AUTH_CHANNEL = 
+AUTH_CHANNEL = -1001701687567
 
 
 #__________NOT ________COMPULSORY____________ ::
@@ -21,7 +21,7 @@ INDEX_LINK = ""
 
 # OTHERS ::
 EDIT_SLEEP_TIME_OUT = 15
-MAX_TG_SPLIT_FILE_SIZE = 1072864000
+MAX_TG_SPLIT_FILE_SIZE = 2097152000
 
 #_____There are other vars too_____Read Readme to Know better____
 #_____And fill them as new line if needed :)
